src/test/deca/context/valid/self/while.deca
{
int compteur = 1;
while(compteur < 3){
    println(compteur);
    compteur = compteur +1;
}
}