src/test/deca/context/invalid/self/operationClass2.deca
class A {}

{
    A a = new A();
    A b = new A();
    boolean bool;

    bool = a < b;
}